# SeetaFaceEngine

FaceAlignment/: CMakeLists.txt
FaceAlignment/src/test/: face_alignment_test.cpp
FaceAlignment/src/test_img_list/: face_alignment_test_list.cpp
FaceAlignment/src/test_lfw/: face_alignment_test_lfw.cpp
FaceDetection/src/test/: facedetection_test.cpp
FaceIdentification/: CMakeLists.txt
FaceIdentification/src/test/: CMakeLists.txt  test_face_recognizer.cpp  test_face_verification.cpp
